--- a/第一章：数据结构和算法/1.2 解压可迭代对象赋值给多个变量.ipynb
+++ b/第一章：数据结构和算法/1.2 解压可迭代对象赋值给多个变量.ipynb
@@ -1,6 +1,511 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.2 解压可迭代对象赋值给多个变量\n",
+    "\n",
+    "### 问题\n",
+    "如果一个可迭代对象的元素个数超过变量个数时，会抛出一个 ValueError 。那么\n",
+    "怎样才能从这个可迭代对象中解压出 N 个元素出来？\n",
+    "### 解决方案\n",
+    "Python 的星号表达式可以用来解决这个问题。比如，你在学习一门课程，在学期\n",
+    "末的时候，你想统计下家庭作业的平均成绩，但是排除掉第一个和最后一个分数。如果\n",
+    "只有四个分数，你可能就直接去简单的手动赋值，但如果有 24 个呢？这时候星号表达\n",
+    "式就派上用场了："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drop_first_last(grades):\n",
+    "    frist, *middle, last = grades\n",
+    "    return avg(middle)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "另外一种情况，假设你现在有一些用户的记录列表，每条记录包含一个名字、邮\n",
+    "件，接着就是不确定数量的电话号码。你可以像下面这样分解这些记录："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "record = ('Dave', 'dave@example.com', '773-555-1212', '847-555-1212')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name, email, *phone_numbers = record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['773-555-1212', '847-555-1212']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phone_numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "值得注意的是上面解压出的 phone_numbers 变量永远都是列表类型，不管解压的\n",
+    "电话号码数量是多少（包括 0 个）。所以，任何使用到 phone_numbers 变量的代码就不\n",
+    "需要做多余的类型检查去确认它是否是列表类型了。\n",
+    "\n",
+    "星号表达式也能用在列表的开始部分。比如，你有一个公司前 8 个月销售数据的\n",
+    "序列，但是你想看下最近一个月数据和前面 7 个月的平均值的对比。你可以这样做："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales_record = [10, 8, 7, 1, 9, 5, 10, 3]\n",
+    "*trailing_qtrs, current_qtr = sales_record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trailing_avg = sum(trailing_qtrs) / len(trailing_qtrs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 8, 7, 1, 9, 5, 10]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trailing_qtrs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.142857142857143"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trailing_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_qtr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 讨论\n",
+    "扩展的迭代解压语法是专门为解压不确定个数或任意个数元素的可迭代对象而设\n",
+    "计的。通常，这些可迭代对象的元素结构有确定的规则（比如第 1 个元素后面都是电\n",
+    "话号码），星号表达式让开发人员可以很容易的利用这些规则来解压出元素来。而不是\n",
+    "通过一些比较复杂的手段去获取这些关联的元素值。\n",
+    "\n",
+    "值得注意的是，星号表达式在迭代元素为可变长元组的序列时是很有用的。比如，\n",
+    "下面是一个带有标签的元组序列："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "records = [\n",
+    "    ('foo', 1, 2),\n",
+    "    ('bar', 'hello'),\n",
+    "    ('foo', 3, 4),\n",
+    "    ('bar', 'world')\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo 1 2\n",
+      "bar hello\n",
+      "foo 3 4\n",
+      "bar world\n"
+     ]
+    }
+   ],
+   "source": [
+    "def do_foo(x, y):\n",
+    "    print('foo', x, y)\n",
+    "\n",
+    "def do_bar(s):\n",
+    "    print('bar', s)\n",
+    "    \n",
+    "for tag, *args in records:\n",
+    "    if tag is 'foo':\n",
+    "        do_foo(*args)\n",
+    "    elif tag is 'bar':\n",
+    "        do_bar(*args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "星号解压语法在字符串操作的时候也会很有用，比如字符串的分割。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line = 'nobody:*:-2:-2:Unprivileged User:/var/empty:/usr/bin/false'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uname, *fields, homedir, sh = line.split(':')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'nobody'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/var/empty'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "homedir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/usr/bin/false'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['*', '-2', '-2', 'Unprivileged User']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fields"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "有时候，你想解压一些元素后丢弃它们，你不能简单就使用 * ，但是你可以使用一\n",
+    "个普通的废弃名称，比如 _ 或者 ign （ignore）。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "record = ('ACME', 50, 123.45, (12, 18, 2012))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name, *_, (*_, year) = record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ACME'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2012"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在很多函数式语言中，星号解压语法跟列表处理有许多相似之处。比如，如果你有\n",
+    "一个列表，你可以很容易的将它分割成前后两部分："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " items = [1, 10, 7, 4, 5, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "head, *tail = items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 7, 4, 5, 9]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tail"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如果你够聪明的话，还能用这种分割语法去巧妙的实现递归算法。比如："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum(items):\n",
+    "    head, *tail = items\n",
+    "    return head + sum(tail) if tail else head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(items)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "然后，由于语言层面的限制，递归并不是 Python 擅长的。因此，最后那个递归演\n",
+    "示仅仅是个好奇的探索罢了，对这个不要太认真了。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
